<resources>
    <string name="app_name">SistemasEscalablesApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_verificar_email">Sign in</string>

    <!-- Strings related to login -->
    <string name="bienvenido">Bienvenido</string>
    <string name="empresa">Sistemas Escalables</string>
    <string name="prompt_email">INGRESE EL CORREO</string>
    <string name="prompt_password">INGRESE LA CONTRASEÑA</string>
    <string name="action_sign_in">Siguiente</string>|
    <string name="ingresar">INGRESAR</string>
    <string name="error_invalid_email">El Correo Ingresado Es Invalido</string>
    <string name="cedula2">"Error!"</string>
    <string name="error_invalid_password">CONTRASEÑA DEMACIADO CORTA</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="invalid_credentials">Credenciales inválidos</string>


    <!-- Strings related to Networks -->
    <string name="networks">"Comprueba tu conexion a internet"</string>

    <!-- Menu lateral -->
    <string name="exit_to_app">"Salir"</string>
    <string name="users">"Usuarios"</string>

    <string name="nombre">"Nombre"</string>
    <string name="apellido">"Apellido"</string>
    <string name="email">"Email"</string>
    <string name="direccion">"Direccion"</string>
    <string name="telefono">"Telefono"</string>
    <string name="tipopersonas">"Tipo Persona"</string>
    <string name="regimen">"Regimen Iva"</string>
    <string name="cedula">"Cedula"</string>
    <string name="fail_registrer">"Fallo al registrar usuario"</string>

    <string name="permits">Es necesario conceder permiso</string>
    <string name="action_search">Buscar</string>

    <!-- Datos -->
    <string name="password">Contraseña</string>
    <string name="button_register">Registrar</string>
    <string name="fail_register">Fallo al registrar usuarios</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- CLIENTES -->
    <string name="clientes">Clientes</string>
    <string name="crearCliente">Registrar cliente</string>
    <string name="nid">NID</string>
    <string name="invalid_nid">El nid ya esta registrado</string>

    <!-- DETALLES CLIENTES -->
    <string name="details_cliente">Detalles del clientes</string>
    <string name="report_cliente">Informe del cliente</string>
    <string name="debt_cliente">Informe de la deuda</string>
    <string name="number_ticket">Ticket:</string>
    <string name="debt">Deuda</string>
    <string name="date">Fecha</string>
    <string name="payment">Pago</string>
    <string name="edit">Actualizar</string>
    <string name="debts">No tiene deuda</string>
    <string name="payments">Realizar pagos</string>
    <string name="message_payments">Pago incorrecto</string>
    <!-- PROVEEDORES -->
    <string name="proveedores">Proveedores</string>
</resources>
