<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="details" type="ViewModels.DetailsClienteViewModels"/>
    </data>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >
            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/report_cliente"
                        android:textAlignment="center"
                        android:textColor="@color/colorAzul"
                        android:textSize="18sp" />
                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:ignore="MissingConstraints">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="15dp">
                                <android.support.design.widget.FloatingActionButton
                                    android:id="@+id/fab_Edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    app:backgroundTint="@color/darker_gray"
                                    app:srcCompat="@mipmap/person_black"
                                    android:onClick="@{details::onClick}"/>

                                <TextView
                                    android:id="@+id/textView28"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/edit"
                                    android:textAlignment="center" />

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:padding="15dp">
                                <android.support.design.widget.FloatingActionButton
                                    android:id="@+id/fab_Payments"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    app:backgroundTint="@color/darker_gray"
                                    app:srcCompat="@drawable/ic_credit_card"
                                    android:onClick="@{details::onClick}"/>
                                <TextView
                                    android:id="@+id/textView29"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/payment"
                                    android:textAlignment="center" />
                            </LinearLayout>

                        </LinearLayout>
                    </android.support.constraint.ConstraintLayout>
                    <android.support.v7.widget.CardView
                        style="@style/CardViewTheme1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:id="@+id/textView9"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nid"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textNid"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nombre"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/apellido"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textLastName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="50dp"
                                android:orientation="vertical">
                                <TextView
                                    android:id="@+id/textView10"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/telefono"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:id="@+id/textView12"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/email"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:id="@+id/textView14"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/direccion"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/debt_cliente"
                        android:textAlignment="center"
                        android:textColor="@color/colorAzul"
                        android:textSize="18sp" />
                    <android.support.v7.widget.CardView
                        style="@style/CardViewTheme1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textAlignment="center"
                                android:textColor="@color/colorAzul"
                                android:textSize="16sp" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp">
                                <TextView
                                    android:id="@+id/textView18"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/number_ticket"
                                    android:textColor="@color/colorAzul"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/textTicket"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <TextView
                                        android:id="@+id/textView20"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/debt"
                                        android:textColor="@color/colorAzul"
                                        android:textSize="16sp" />
                                    <TextView
                                        android:id="@+id/textDebt"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                    <TextView
                                        android:id="@+id/textView22"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/date"
                                        android:textColor="@color/colorAzul"
                                        android:textSize="16sp" />
                                    <TextView
                                        android:id="@+id/textDate1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="50dp"
                                    android:orientation="vertical">
                                    <TextView
                                        android:id="@+id/textView24"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/payment"
                                        android:textColor="@color/colorAzul"
                                        android:textSize="16sp" />
                                    <TextView
                                        android:id="@+id/textPayment"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                    <TextView
                                        android:id="@+id/textView26"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/date"
                                        android:textColor="@color/colorAzul"
                                        android:textSize="16sp" />
                                    <TextView
                                        android:id="@+id/textDate2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                    android:id="@+id/image_paralax"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>